Kult Divinity Lost layout bugfix

--- a/Kult Divinity Lost/KULT Divinity Lost.css
+++ b/Kult Divinity Lost/KULT Divinity Lost.css
@@ -510,9 +510,9 @@
 	background: white;
 	color: black;
 	font-weight: bold;
-	width: 10%;
+	width: auto;
 	text-align: center;
-	padding: 0%;
+	padding: 0 2px;;
 	float: left;
 }
 .charsheet input[type=radio]:hover + label{
